feat: parse tree

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(nippon)
 set(CMAKE_CXX_STANDARD 20)
 
 add_executable(nippon
-        src/main.cpp)
+        src/main.cpp
+        src/tokenization.h
+        src/parser.h
+        src/generation.h)
